--- a/nfs4k8s/Vagrantfile
+++ b/nfs4k8s/Vagrantfile
@@ -5,15 +5,15 @@
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
-Vagrant.configure("2") do |config|
+Vagrant.configure(2) do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
 
   # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
+  # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = "ubuntu/focal64"
-  # config.vm.box = "debian/bullseye64"
+  ## config.vm.box = "debian/bullseye64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -23,13 +23,7 @@ Vagrant.configure("2") do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
   # config.vm.network "forwarded_port", guest: 80, host: 8080
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -61,51 +55,48 @@ Vagrant.configure("2") do |config|
   # View the documentation for the provider you are using for more
   # information on available options.
 
+  # Define a Vagrant Push strategy for pushing to Atlas. Other push strategies
+  # such as FTP and Heroku are also available. See the documentation at
+  # https://docs.vagrantup.com/v2/push/atlas.html for more information.
+  # config.push.define "atlas" do |push|
+  #   push.app = "YOUR_ATLAS_USERNAME/YOUR_APPLICATION_NAME"
+  # end
+
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
+  #   sudo apt-get update
+  #   sudo apt-get install -y apache2
   # SHELL
 
-  N = 3
-  (1..N).each do |instance_id|
-    config.vm.define "k#{instance_id}" do |instance|
+  config.vm.define "nfs4k8s", primary: true do |instance|
 
-      instance.vm.hostname = "k#{instance_id}.vagrant.local"
-      instance.vm.network "private_network", ip: "192.168.56.22#{instance_id}"
+    instance.vm.hostname = "nfs4k8s.dimarino.local"
+    instance.vm.network "private_network", ip: "192.168.59.254"
 
-      instance.vm.provider "virtualbox" do |vb|
+    # instance.vm.synced_folder ".", "/vagrant", disabled: true
 
-        # Display the VirtualBox GUI when booting the machine
-        # vb.gui = true
+    instance.vm.provider "virtualbox" do |vb|
 
-        # Customize the amount of memory on the VM:
-        vb.memory = "8192"
-        vb.cpus = 4
+      # Display the VirtualBox GUI when booting the machine
+      # vb.gui = true
 
-        vb.customize ["modifyvm", :id, "--audio", "none"]
-        # vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
+      # Customize the amount of memory on the VM:
+      vb.memory = "2048"
 
-      end
+      vb.customize ["modifyvm", :id, "--audio", "none"]
+      # vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
 
-      # Only execute once the Ansible provisioner,
-      # when all the machines are up and ready.
-      if instance_id == 3
-        instance.vm.provision :ansible do |ansible|
-          # Disable default limit to connect to all the machines
-          ansible.limit = "all"
-          ansible.playbook = "provisioning/site.yml"
-          ansible.groups = {
-            "kubernetes_masters" => ["k1"],
-            "kubernetes_nodes" => ["k2", "k3"],
-            "all_groups:children" => ["kubernetes_masters", "kubernetes_nodes"],
-          }
-          # ansible.verbose = "v"
-        end
-      end
     end
+
+    # instance.vm.synced_folder ".", "/vagrant", disabled: true
+
+    instance.vm.provision :ansible do |ansible|
+      ansible.playbook = "provisioning/site.yml"
+      # ansible.verbose = "v"
+    end
+
   end
 
 end
