--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "ubuntu/focal64"
+  ##config.vm.box = "ubuntu/jammy64"
+  config.vm.box = "ubuntu/jammy64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -78,11 +79,13 @@ Vagrant.configure(2) do |config|
       # Display the VirtualBox GUI when booting the machine
       # vb.gui = true
 
+      vb.cpus = 2
+
       # Customize the amount of memory on the VM:
-      vb.memory = "2048"
+      vb.memory = "8192"
 
       vb.customize ["modifyvm", :id, "--audio", "none"]
-      vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
+      # vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
     end
 
     instance.vm.provision :ansible do |ansible|
