Jenkins, Kubernetes e prometheus

--- a/jenkins/provisioning/site.yml
+++ b/jenkins/provisioning/site.yml
@@ -11,16 +11,17 @@
   # - docker
   - jenkins
 
-# - name: apply jenkins_masters configuration to jenkins masters nodes
-#   hosts: jenkins_masters
-#   become: True
+- name: apply jenkins_masters configuration to jenkins masters nodes
+  hosts: jenkins_masters
+  become: True
 
-#   roles:
-#   - jenkins_masters
+  roles:
+  - jenkins_masters
 
-# - name: apply jenkins_slaves configuration to jenkins slaves nodes
-#   hosts: jenkins_slaves
-#   become: True
+- name: apply jenkins_slaves configuration to jenkins slaves nodes
+  hosts: jenkins_slaves
+  become: True
 
-#   roles:
-#   - jenkins_slaves
+  roles:
+  - jenkins_slaves
+
