--- a/jenkins/Vagrantfile
+++ b/jenkins/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "ubuntu/focal64"
+  config.vm.box = "ubuntu/jammy64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -94,7 +94,7 @@ Vagrant.configure(2) do |config|
   #
   # end
 
-  N = 1
+  N = 3
   (1..N).each do |instance_id|
     config.vm.define "jenkins0#{instance_id}" do |instance|
       instance.vm.hostname = "jenkins0#{instance_id}.vagrant.local"
