--- a/jenkins/Vagrantfile
+++ b/jenkins/Vagrantfile
@@ -108,14 +108,14 @@ Vagrant.configure(2) do |config|
         # Customize the amount of memory on the VM:
         vb.memory = "2048"
 
-        vb.customize ["modifyvm", :id, "--audio", "none"]
-        vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
+        # vb.customize ["modifyvm", :id, "--audio", "none"]
+        # vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
 
       end
 
       # Only execute once the Ansible provisioner,
       # when all the machines are up and ready.
-      if instance_id == 1
+      if instance_id == 3
         instance.vm.provision :ansible do |ansible|
           # Disable default limit to connect to all the machines
           ansible.limit = "all"
