--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ hosts
 kubernetes/provisioning/join-command
 kubernetes/config
 kubernetes/kubeconfig
-
+kubernetes-debian/provisioning/join-command
+kubernetes-debian/config
+kubernetes-debian/kubeconfig
