--- a/jenkins/provisioning/roles/jenkins_slaves/tasks/main.yml
+++ b/jenkins/provisioning/roles/jenkins_slaves/tasks/main.yml
@@ -1,25 +1,12 @@
 ---
 # tasks file for jenkins-slaves
 
-# - name: insert/update IP address block in /etc/hosts
-#   blockinfile:
-#     path: /etc/hosts
-#     block: |
-#       192.168.56.161    jenkins01.vagrant.local  jenkins01
-#       192.168.56.162    jenkins02.vagrant.local  jenkins02
-#       192.168.56.163    jenkins03.vagrant.local	 jenkins03
-
-- name: install openjdk-11-jdk-headless package first
+- name: install packages
   apt: name={{ packages }} state=present autoremove=yes
   vars:
     packages:
       - openjdk-11-jdk-headless
-
-# - name: install packages
-#   apt: name={{ packages }} state=present autoremove=yes
-#   vars:
-#     packages:
-#       - maven
+      - chrony
 
 - name: add group jenkins
   group: name=jenkins gid=121
@@ -37,3 +24,6 @@
 
 - name: set /var/lib/jenkins/.ssh/config
   copy: src=config.ssh dest=/var/lib/jenkins/.ssh/config owner=jenkins group=jenkins mode=0600 backup=yes
+
+- name: add jenkins user to docker group
+  user: name=jenkins groups=docker append=yes
