--- a/ubuntu-focal64/provisioning/roles/common/tasks/main.yml
+++ b/ubuntu-focal64/provisioning/roles/common/tasks/main.yml
@@ -28,7 +28,7 @@
   apt: name={{ packages }} state=present autoremove=yes
   vars:
     packages:
-      - ntp
+      - chrony
 
 - name: turns vim default system editor
   alternatives: name=editor path=/usr/bin/vim.basic
